add PUT and DELETE note endpoints
